[gd_scene load_steps=7 format=3 uid="uid://dmc825evbnpux"]

[ext_resource type="Texture2D" uid="uid://cd2vtx3pp715r" path="res://assets/Background/cutscene 1.webp" id="1_4sb4t"]
[ext_resource type="Script" uid="uid://cttl2r22rkkes" path="res://scenes/cutscene1/cutscene_1.gd" id="1_uc1m6"]
[ext_resource type="Texture2D" uid="uid://dw0pj5m2y7kv8" path="res://assets/Buttons/Gemini_Generated_Image_j7inz5j7inz5j7in.webp" id="3_vsynk"]
[ext_resource type="FontFile" uid="uid://din2t4re7ena3" path="res://assets/Fonts/your-doodle-font/Your Doodle Font.otf" id="4_d3lg0"]
[ext_resource type="AudioStream" uid="uid://qb350ox70wfy" path="res://assets/Sound/CUTSCENE 1 edit.mp3" id="5_mjjed"]

[sub_resource type="LabelSettings" id="LabelSettings_cmeg4"]
font = ExtResource("4_d3lg0")
font_size = 76
font_color = Color(0.223529, 0.117647, 0.0509804, 1)

[node name="Cutscene1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uc1m6")

[node name="Cutscene1Bg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_4sb4t")
expand_mode = 1

[node name="SkipButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 744.0
offset_top = 68.0
offset_right = 1060.0
offset_bottom = 228.0
texture_normal = ExtResource("3_vsynk")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="SkipButton"]
layout_mode = 0
offset_left = 43.0
offset_top = 31.0
offset_right = 277.0
offset_bottom = 125.0
text = "LEWATI"
label_settings = SubResource("LabelSettings_cmeg4")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Cutscene1Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_mjjed")

[connection signal="pressed" from="SkipButton" to="." method="_on_skip_button_pressed"]
[connection signal="finished" from="Cutscene1Audio" to="." method="_on_cutscene_1_audio_finished"]
